--- a/index.html
+++ b/index.html
@@ -4,8 +4,162 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portofolio Saya</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <!-- Navbar -->
+    <nav>
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#profile">Our Profile</a></li>
+            <li><a href="#achievement">Achievement</a></li>
+            <li><a href="#message">Message Us</a></li>
+        </ul>
+    </nav>
+
+    <!-- Home Page -->
+    <section id="home">
+        <h1 id="welcome-message"></h1>
+        <p>Ini adalah website latihan pertama</p>
+    </section>
+
+    <!-- Banner Auto Slide -->
+    <section>
+        <!--image slider start-->
+        <div class="slider">
+            <div class="slides">
+                <!--radio button-->
+                <input type="radio" name="radio-button" id="radio1">
+                <input type="radio" name="radio-button" id="radio2">
+                <input type="radio" name="radio-button" id="radio3">
+                <input type="radio" name="radio-button" id="radio4">
+
+                <!--slide image-->
+                <div class="slide-first">
+                    <img src="assets/image1.jpg" alt="image1">
+                </div>
+                <div class="slide">
+                    <img src="assets/image2.jpg" alt="image2">
+                </div>
+                <div class="slide">
+                    <img src="assets/image3.jpg" alt="image3">
+                </div>
+                <div class="slide">
+                    <img src="assets/image4.jpg" alt="image4">
+                </div>
+
+                <!--automatic navigation-->
+                <div class="navigation-auto">
+                    <div class="auto-button1"></div>
+                    <div class="auto-button2"></div>
+                    <div class="auto-button3"></div>
+                    <div class="auto-button4"></div>
+                </div>
+
+                <!--manual navigation-->
+                <div class="navigation-manual">
+                    <label for="radio1" class="manual-button"></label>
+                    <label for="radio2" class="manual-button"></label>
+                    <label for="radio3" class="manual-button"></label>
+                    <label for="radio4" class="manual-button"></label>
+                </div>
+
+            </div>
+        </div>
     
+    </section>
+
+
+    <!-- Our Profile Page 
+    <section id="profile">
+        <div class="banner-background">
+            <h2>About Our School</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+        <div class="vision-mission">
+            <h2>Vision & Mission</h2>
+            <p>Vision: Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <p>Mission: Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+    </section>
+
+    <!-- Our Facilitation Section 
+    <section id="facilitation">
+        <h2>Our Facilitation</h2>
+        <div class="facilities">
+            <div class="facility">
+                <img src="professional_teacher.png" alt="Professional Teacher">
+                <p>Professional Teacher</p>
+            </div>
+            <div class="facility">
+                <img src="sport_field.png" alt="Sport Field">
+                <p>Sport Field</p>
+            </div>
+            <div class="facility">
+                <img src="classroom.png" alt="Classroom">
+                <p>Classroom</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Message Us Section 
+    <section id="message">
+        <h2>Message Us</h2>
+        <form name="message-form" onsubmit="return validateForm()">
+            Nama: <input placeholder="Nama" type="text" name="full-name" />
+            <br />
+
+            Tanggal Lahir:
+            <input type="date" name="birth-date" />
+            <br />
+
+            Jenis Kelamin: 
+            <input type="radio" id="male" name="gender" value="male" />
+            <label for="male">Laki-laki</label>
+            <input type="radio" id="female" name="gender" value="female" />
+            <label for="female">Perempuan</label>
+            <br />
+
+            Pesan:
+            <textarea placeholder="Pesan" name="messages"></textarea>
+            <br />
+
+            <input type="submit" value="Submit" />
+        </form>
+
+        <div>
+            <p>Nama:<span id="sender-full-name"></span></p>
+            <p>Tanggal Lahir:<span id="sender-birth-date"></span></p>
+            <p>Jenis Kelamin:<span id="sender-gender"></span></p>
+            <p>Pesan:<span id="sender-meesages"></span></p>
+        </div>
+       <!-- <form id="contact-form">
+            <label for="name">Nama:</label>
+            <input type="text" id="name" name="name" required>
+            <br>
+            <label for="birthdate">Tanggal Lahir:</label>
+            <input type="date" id="birthdate" name="birthdate" required>
+            <br>
+            <label>Jenis Kelamin:</label>
+            <input type="radio" id="male" name="gender" value="Laki-Laki" checked>
+            <label for="male">Laki-Laki</label>
+            <input type="radio" id="female" name="gender" value="Perempuan">
+            <label for="female">Perempuan</label>
+            <br>
+            <label for="message">Pesan:</label>
+            <textarea id="message" name="message" required></textarea>
+            <br>
+            <button type="submit">Submit</button>
+        </form> -->
+        <div id="form-output"></div> 
+    </section>
+
+
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2025 Portofolio Saya. All rights reserved.</p>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
