--- a/index.html
+++ b/index.html
@@ -100,6 +100,11 @@
         </section>
     </main>
 
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2025 Portofolio Saya. All rights reserved.</p>
+    </footer>
+
     <script src="js/script.js"></script>
 </body>
 </html>
